--- a/assets/style.css
+++ b/assets/style.css
@@ -4,14 +4,13 @@
 
 body {
   background-color: #6d645f;
-  margin: 0;
+  margin-left: 25%;
+  margin-right: 25%;
   display: block;
 }
 
 main {
   background-color: #ffffff;
-  margin-left: 25%;
-  margin-right: 25%;
 }
 
 h1 {
@@ -139,20 +138,22 @@ button {
   padding-bottom: 1rem;
   padding-left: 0.5rem;
   font-family: Arial, Helvetica, sans-serif;
+  border: 0em;
 }
 
 footer {
   display: flex;
   justify-content: space-between;
   background-color: #ffffff;
-  margin-left: 25%;
-  margin-right: 25%;
   padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-bottom: 0.5rem;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-  font-size: 0.7rem;
+  font-size: 0.4rem;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  /* border-top-color: #6d645f;
-  border-top: 1px; */
+  border-top: 1px solid black;
+}
+
+.socials {
+  color: #6d645f;
 }
