--- a/assets/style.css
+++ b/assets/style.css
@@ -15,7 +15,7 @@ main {
 
 h1 {
   font-size: 3rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Archivo Narrow", sans-serif;
   font-weight: 590;
   text-align: center;
 }
@@ -38,7 +38,7 @@ nav {
   padding-bottom: 2rem;
   text-transform: uppercase;
   font-weight: lighter;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Archivo Narrow", sans-serif;
 }
 
 .nav-item {
@@ -71,7 +71,6 @@ a:hover {
 .card img {
   /* object-fit: none; */
   width: 100%;
-  /* border: 0em; */
 }
 
 .card h2 {
@@ -80,7 +79,7 @@ a:hover {
   color: #ffffff;
   font-size: 0.9rem;
   font-weight: lighter;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Archivo Narrow", sans-serif;
   text-transform: uppercase;
   margin: 0%;
   padding-top: 1rem;
@@ -112,13 +111,13 @@ a:hover {
 .text-content {
   margin: 0.2rem;
   width: 33%;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .text-content h3 {
   font-size: 0.9rem;
   font-weight: 100;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Archivo Narrow", sans-serif;
 }
 
 .bottom-text {
@@ -149,8 +148,8 @@ footer {
   padding-bottom: 0.5rem;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-  font-size: 0.4rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 0.5rem;
+  font-family: Arial, Helvetica, sans-serif;
   border-top: 1px solid black;
 }
 
