--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
-/* * {
+* {
   border: 1px solid red;
-} */
+}
 
 body {
   background-color: #6d645f;
@@ -33,9 +33,9 @@ em {
 }
 
 nav {
-  text-align: center;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  display: flex;
+  justify-content: center;
+  padding: 0%;
   text-transform: uppercase;
   font-weight: lighter;
   font-family: "Archivo Narrow", sans-serif;
@@ -44,10 +44,15 @@ nav {
 .nav-item {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  margin: 00.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
   font-weight: lighter;
   font-size: smaller;
   text-decoration: none;
+}
+
+a {
+  color: black;
 }
 
 a:hover {
