--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
-* {
+/* * {
   border: 1px solid red;
-}
+} */
 
 body {
   background-color: #6d645f;
@@ -14,16 +14,16 @@ main {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 4rem;
   font-family: "Archivo Narrow", sans-serif;
-  font-weight: 590;
+  font-weight: 500;
   text-align: center;
 }
 
 em {
   color: #682e33;
   font-family: Arial, Helvetica, sans-serif;
-  font-weight: bolder;
+  font-weight: 600;
   font-style: normal;
 }
 
@@ -153,11 +153,12 @@ footer {
   padding-bottom: 0.5rem;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-  font-size: 0.5rem;
+  font-size: 0.6rem;
   font-family: Arial, Helvetica, sans-serif;
-  border-top: 1px solid black;
+  border-top: 1px solid #6d645f;
 }
 
 .socials {
   color: #6d645f;
+  font-size: large;
 }
